feat: campaign dashboard
