# apps/backend/src/main/java/com/adsync/campaign/infrastructure/api/dto/UpdateCampaignDTO.java
@@ -2,34 +2,45 @@ package com.adsync.campaign.infrastructure.api.dto;
 
 import com.adsync.campaign.domain.models.Channel;
 import jakarta.validation.constraints.Pattern;
+
 import java.time.LocalDateTime;
 import java.util.Optional;
 
 public record UpdateCampaignDTO(
-    Channel channel,
-    Double budget,
-    @Pattern(
-            regexp = "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}$",
-            message = "Date must follow the ISO DateTime format: yyyy-MM-ddTHH:mm:ss")
+        String name,
+        String channel,
+        Double budget,
+        @Pattern(
+                regexp = "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}$",
+                message = "Date must follow the ISO DateTime format: yyyy-MM-ddTHH:mm:ss")
         String start,
-    @Pattern(
-            regexp = "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}$",
-            message = "Date must follow the ISO DateTime format: yyyy-MM-ddTHH:mm:ss")
+        @Pattern(
+                regexp = "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}$",
+                message = "Date must follow the ISO DateTime format: yyyy-MM-ddTHH:mm:ss")
         String end) {
 
-  public Optional<Channel> _channel() {
-    return Optional.ofNullable(channel);
-  }
+    public Optional<String> _name() {
+        return Optional.ofNullable(name);
+    }
 
-  public Optional<Double> _budget() {
-    return Optional.ofNullable(budget);
-  }
+    public Optional<Channel> _channel() {
+        if (channel == null) {
+            return Optional.empty();
+        }
 
-  public Optional<LocalDateTime> _startDate() {
-    return Optional.ofNullable(start).map(LocalDateTime::parse);
-  }
+        return Optional.of(channel.toLowerCase())
+                .map(Channel::fromString);
+    }
 
-  public Optional<LocalDateTime> _endDate() {
-    return Optional.ofNullable(end).map(LocalDateTime::parse);
-  }
+    public Optional<Double> _budget() {
+        return Optional.ofNullable(budget);
+    }
+
+    public Optional<LocalDateTime> _start() {
+        return Optional.ofNullable(start).map(LocalDateTime::parse);
+    }
+
+    public Optional<LocalDateTime> _end() {
+        return Optional.ofNullable(end).map(LocalDateTime::parse);
+    }
 }
