# apps/backend/src/main/java/com/adsync/campaign/infrastructure/persistence/mappers/CampaignMapper.java
@@ -6,20 +6,22 @@ import com.adsync.campaign.infrastructure.persistence.models.SqlCampaign;
 
 public class CampaignMapper {
 
-  public static Campaign toDomain(SqlCampaign sqlCampaign) {
-    return new Campaign(
-        sqlCampaign.id(),
-        sqlCampaign.channel(),
-        sqlCampaign.budget(),
-        new Period(sqlCampaign.startDate(), sqlCampaign.endDate()));
-  }
+    public static Campaign toDomain(SqlCampaign sqlCampaign) {
+        return new Campaign(
+                sqlCampaign.id(),
+                sqlCampaign.name(),
+                sqlCampaign.channel(),
+                sqlCampaign.budget(),
+                new Period(sqlCampaign.startDate(), sqlCampaign.endDate()));
+    }
 
-  public static SqlCampaign toSql(Campaign campaign) {
-    return new SqlCampaign(
-        campaign.id(),
-        campaign.channel(),
-        campaign.budget(),
-        campaign.period().start(),
-        campaign.period().end());
-  }
+    public static SqlCampaign toSql(Campaign campaign) {
+        return new SqlCampaign(
+                campaign.id(),
+                campaign.name(),
+                campaign.channel(),
+                campaign.budget(),
+                campaign.period().start(),
+                campaign.period().end());
+    }
 }
